fixing the index to add new data

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <form id="addNewDataForm">
+    <form id="addNewDataForm" onsubmit="return false;">
         <div class="agregar">
             <div class="agregar_contenedor">
                 <select name="New Data" class="agregar_tipo" id="type" >
@@ -54,7 +54,12 @@
                 </select>
                 <input type="text" class="agregar_descripcion" 
                 placeholder="Add a descrption" id="form_descrption"/>
-                <input type="number" class="agregar_valor" placeholder="Value" id="form_value">
+                <input type="number" class="agregar_valor" placeholder="Value" 
+                id="form_value" step="any"/>
+
+                <button class="agregar_btn" onclick="addNewData()">
+                    <ion-icon name="add-circle-outline"></ion-icon>
+                </button>
             </div>
         </div>
     </form>
