fixing the functions to add new data throught the form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <form id="addNewDataForm" onsubmit="return false;">
         <div class="agregar">
             <div class="agregar_contenedor">
-                <select name="New Data" class="agregar_tipo" id="type" >
+                <select name="New Data" class="agregar_tipo" id="data_type" >
                     <option value="income" selected>income</option>
                     <option value="expense">expense</option>
                 </select>
